[gd_scene load_steps=4 format=3 uid="uid://c07sox8kw5ryn"]

[ext_resource type="Script" uid="uid://1ts3vpld680a" path="res://editors/scripts/BuildEditor.gd" id="1_mmq0s"]

[sub_resource type="FontVariation" id="FontVariation_tmsmw"]

[sub_resource type="Theme" id="Theme_genln"]
default_font = SubResource("FontVariation_tmsmw")

[node name="BuildManagerEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mmq0s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1081.0
offset_bottom = 594.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 38.0
offset_top = 90.0
offset_right = 256.0
offset_bottom = 148.0

[node name="Label" type="Label" parent="Panel/VBoxContainer2"]
layout_mode = 2
text = "Combo name:"

[node name="ComboName" type="LineEdit" parent="Panel/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
modulate = Color(0.593134, 0.593134, 0.593134, 1)
custom_minimum_size = Vector2(0, 20)
layout_mode = 0
offset_left = 39.0
offset_top = 156.0
offset_right = 256.0
offset_bottom = 625.0
theme = SubResource("Theme_genln")
theme_override_constants/separation = 20

[node name="Weapons" type="VBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Weapons"]
layout_mode = 2
size_flags_vertical = 0
text = "Arma:"

[node name="WeaponDropdown" type="OptionButton" parent="Panel/VBoxContainer/Weapons"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
size_flags_vertical = 0

[node name="Helmet" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Helmet"]
layout_mode = 2
size_flags_vertical = 0
text = "Helmet:"

[node name="HelmetDropdown" type="OptionButton" parent="Panel/VBoxContainer/Helmet"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="Armor" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/VBoxContainer/Armor"]
layout_mode = 2
size_flags_vertical = 0
text = "Armor:"

[node name="ArmorDropdown" type="OptionButton" parent="Panel/VBoxContainer/Armor"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="Boots" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="Panel/VBoxContainer/Boots"]
layout_mode = 2
size_flags_vertical = 0
text = "Boots:"

[node name="BootsDropdown" type="OptionButton" parent="Panel/VBoxContainer/Boots"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="BuildStatsPanel" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/BuildStatsPanel"]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/BuildStatsPanel"]
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/VBoxContainer/BuildStatsPanel"]
layout_mode = 2

[node name="SkillsPanel" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/SkillsPanel"]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/SkillsPanel"]
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/VBoxContainer/SkillsPanel"]
layout_mode = 2

[node name="Label4" type="Label" parent="Panel/VBoxContainer/SkillsPanel"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 308.0
offset_top = 111.0
offset_right = 851.0
offset_bottom = 459.0

[node name="UltimateSkillEffect" type="VBoxContainer" parent="Panel2"]
layout_mode = 0
offset_left = 310.0
offset_top = 12.0
offset_right = 508.0
offset_bottom = 327.0
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
text = "Ultimate Skill Effect:"

[node name="EffectTypeDropdown" type="OptionButton" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "SLOW"
popup/item_0/id = 0
popup/item_1/text = "CRIT BUFF"
popup/item_1/id = 1
popup/item_2/text = "LIFE STEAL"
popup/item_2/id = 2
popup/item_3/text = "STUN"
popup/item_3/id = 3

[node name="Label2" type="Label" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
text = "Value:"

[node name="SpinValue" type="SpinBox" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
step = 0.5

[node name="Label3" type="Label" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
text = "Duration:"

[node name="SpinDuration" type="SpinBox" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
step = 0.5

[node name="Label4" type="Label" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
text = "Chance:"

[node name="SpinChance" type="SpinBox" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
step = 0.5

[node name="Label5" type="Label" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2
text = "Stack:"

[node name="SpinStack" type="SpinBox" parent="Panel2/UltimateSkillEffect"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 880.0
offset_top = 81.0
offset_right = 1043.0
offset_bottom = 578.0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Build Combos:"

[node name="Panel3" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 355.0
offset_top = 126.0
offset_right = 567.0
offset_bottom = 438.0
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Set ffects:"

[node name="Effects" type="HSlider" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
min_value = 1.0
max_value = 2.0
value = 1.0

[node name="effect1" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2

[node name="effect2" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2

[node name="effect3" type="OptionButton" parent="VBoxContainer2"]
layout_mode = 2

[node name="value1" type="SpinBox" parent="VBoxContainer2"]
layout_mode = 2
step = 0.5

[node name="value2" type="SpinBox" parent="VBoxContainer2"]
layout_mode = 2
step = 0.5

[node name="value3" type="SpinBox" parent="VBoxContainer2"]
layout_mode = 2
step = 0.5

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 530.0
offset_right = 141.0
offset_bottom = 564.0
text = "Salvar"

[connection signal="pressed" from="Button" to="." method="_on_save_combo_presset_pressed"]
